--- a/index.html
+++ b/index.html
@@ -5,9 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snaptube: Your Ticket to Endless Entertainment</title>
     <link rel="icon" href="snap.png" type="image/x-icon">
+
+    <!-- SEO Meta Tags -->
     <meta name="description" content="Download Snaptube APK to easily access and save videos from various platforms. Enjoy high-quality content offline on your Android device.">
-    <meta name="keywords" content="Snaptube APK">
-    <link rel="canonical" href="https://carpetcleaningblackpool.netlify.app/" />
+    <meta name="keywords" content="Snaptube APK, video downloader, YouTube download, free downloads">
+    <meta name="author" content="Snaptube">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://snap-tube.github.io/snap-tube/" />
+
+    <!-- Open Graph Meta Tags (for social sharing) -->
+    <meta property="og:title" content="Snaptube: Your Ticket to Endless Entertainment">
+    <meta property="og:description" content="Download Snaptube APK to easily access and save videos from various platforms. Enjoy high-quality content offline on your Android device.">
+    <meta property="og:image" content="https://snap-tube.github.io/snap-tube/snap.png">
+    <meta property="og:url" content="https://snap-tube.github.io/snap-tube/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Snaptube: Your Ticket to Endless Entertainment">
+    <meta name="twitter:description" content="Download Snaptube APK to easily access and save videos from various platforms. Enjoy high-quality content offline on your Android device.">
+    <meta name="twitter:image" content="https://snap-tube.github.io/snap-tube/snap.png">
+
+    <!-- Schema.org JSON-LD Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Snaptube: Your Ticket to Endless Entertainment",
+      "description": "Download Snaptube APK to easily access and save videos from various platforms. Enjoy high-quality content offline on your Android device.",
+      "url": "https://snap-tube.github.io/snap-tube/",
+      "image": "https://snap-tube.github.io/snap-tube/snap.png",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Snaptube",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://snap-tube.github.io/snap-tube/snap.png"
+        }
+      }
+    }
+    </script>
+
+    <!-- Hreflang (for multilingual websites) -->
+    <link rel="alternate" hreflang="en" href="https://snap-tube.github.io/snap-tube/" />
     <style>
         body {
             font-family: Arial, sans-serif;
